pss-16 - finalizado todos os itens referentes a esta task

--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,5 +1,5 @@
 NODE_ENV=development
-VUE_API_URL=http://api-sedese.stefanini.test/api/v1/
-VUE_APP_TITLE='SISCAP - SEDESE Social'
+VUE_API_URL=http://172.18.0.2/api/v1/
+VUE_APP_TITLE="SISCAP - SEDESE Social"
 
-VUE_APP_API_URL='http://api-sedese.stefanini.test/api/v1/'
+VUE_APP_API_URL='http://172.18.0.2/api/v1/'
