--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,5 @@
 NODE_ENV=development
-VUE_API_URL=http://localhost:9000/api/v1/
+VUE_API_URL=http://172.18.0.2/api/v1/
 VUE_APP_TITLE="SISCAP - SEDESE Social"
+
+VUE_APP_API_URL='http://172.18.0.2/api/v1/'
