--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
       - ./backend:/src
     environment:
       - PROJECT_WEBROOT=/src/public
+    ports:
+      - '80:80'
     networks:
       - default
 
@@ -43,3 +45,4 @@ services:
 networks:
   default:
     name: dev-network
+    external: true
