--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,5 +1,5 @@
 NODE_ENV=development
-VUE_API_URL=http://localhost:9001/api/v1/
-VUE_APP_TITLE="SISCAP - SEDESE Social"
+VUE_API_URL=http://localhost/api/v1/
+VUE_APP_TITLE='SISCAP - SEDESE Social'
 
-VUE_APP_API_URL='http://localhost:9001/api/v1/'
+VUE_APP_API_URL='http://localhost/api/v1/'
