--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,3 @@
 NODE_ENV=development
-VUE_API_URL=http://localhost:9000/api/v1/
+VUE_API_URL=http://localhost/api/v1/
 VUE_APP_TITLE="SISCAP - SEDESE Social"
