--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "particles-bg-vue": "^1.3.5",
     "quasar": "^2.0.0",
     "register-service-worker": "^1.7.2",
+    "sweetalert2": "^11.10.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vue-the-mask": "^0.11.1",
