--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,5 +1,5 @@
 NODE_ENV=development
-VUE_API_URL=http://200.198.62.82/api/v1/
+VUE_API_URL=http://api-sedese.stefanini.test/api/v1/
 VUE_APP_TITLE='SISCAP - SEDESE Social'
 
-VUE_APP_API_URL='http://200.198.62.82/api/v1/'
+VUE_APP_API_URL='http://api-sedese.stefanini.test/api/v1/'
