--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,8 @@
     "particles-bg-vue": "^1.3.5",
     "quasar": "^2.0.0",
     "register-service-worker": "^1.7.2",
+    "sass": "^1.69.5",
+    "sass-loader": "^13.3.2",
     "sweetalert2": "^11.10.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
@@ -53,8 +55,6 @@
     "eslint-plugin-vue": "^8.0.3",
     "jest": "^27.0.5",
     "lint-staged": "^11.1.2",
-    "sass": "1.32.12",
-    "sass-loader": "^12.0.0",
     "spectron": "15.0.0",
     "vue-cli-plugin-electron-builder": "~2.1.1",
     "vue-cli-plugin-quasar": "~5.0.1"
