devolvendo as configuracoes da master para o merge

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     environment:
       - PROJECT_WEBROOT=/src/public
     ports:
-      - '8082:8080'
+      - '8080:8080'
     networks:
       - default
   backend:
@@ -22,7 +22,8 @@ services:
       - ./backend:/src
     environment:
       - PROJECT_WEBROOT=/src/public
- 
+    ports:
+      - '80:80'
     networks:
       - default
 
