--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -4,8 +4,8 @@ VUE_APP_TITLE='SISCAP - SEDESE Social'
 # VUE_API_URL=http://172.18.0.2/api/v1/
 # VUE_APP_API_URL='http://172.18.0.2/api/v1/'
 
-# VUE_API_URL=http://api-sedese.stefanini.test/api/v1/
-# VUE_APP_API_URL='http://api-sedese.stefanini.test/api/v1/'
-VUE_API_URL=http://200.198.62.82/api/v1/
-VUE_APP_API_URL='http://200.198.62.82/api/v1/'
- 
+VUE_API_URL=http://api-sedese.stefanini.test/api/v1/
+VUE_APP_API_URL='http://api-sedese.stefanini.test/api/v1/'
+#VUE_API_URL=http://200.198.62.82/api/v1/
+#VUE_APP_API_URL='http://200.198.62.82/api/v1/'
+
