--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,8 @@
     "@fortawesome/vue-fontawesome": "^3.0.5",
     "@quasar/extras": "^1.0.0",
     "axios": "^0.27.2",
+    "browserslist": "^4.23.1",
+    "caniuse-lite": "^1.0.30001636",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
     "particles-bg-vue": "^1.3.5",
